kubernetes/apps/onedev/onedev/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: onedev
spec:
  hostnames: ["onedev.${SECRET_DOMAIN}"]
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: onedev
          namespace: onedev
          port: 6610
      timeouts:
        request: 3600s
        backendRequest: 3600s
